Revert "fix nav item child elements not wrapping into the next line in Nav component"
This reverts commit 927915cf2e31f32503fdfe8a5a8d8046f72a74a7.

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -99,7 +99,6 @@
 .uk-nav li > a {
     /* 1 */
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     /* 2 */
     column-gap: 0.25em;
